preemptive fix for a scroll bug on mobile when clicking on the sidebar links
I am testing to see if this gets rid of it, otherwise I am unsure why it
really happens, as it seems to be a temporary overflow caused perhaps by
the mobile browser UI.

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -39,7 +39,7 @@ html {
 
 @media (prefers-reduced-motion: no-preference) {
   html {
-    scroll-behavior: smooth;
+    scroll-behavior: auto;
   }
 }
 
